5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4012/executions/1590_825.log
== TEST (2019-03-21 20:31:54) 
-- CODE:
raio = float(input("digite o raio: "))
area = pi * raio ** 2 
volume = 4 / 3 * pi * raio ** 3
print("%.3f" % area)
print("%.3f" % volume)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio ** 2 
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:35:03) 
-- CODE:
raio = float(input("digite o raio: "))
from math import * 
area = pi * raio ** 2 
volume = 4 / 3 * pi * raio ** 3
print("%.3f" % area)
print("%.3f" % volume)
-- OUTPUT:
63.617
381.704
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 20:35:38) 
-- CODE:
raio = float(input("digite o raio: "))

from math import * 

area = pi * raio ** 2 
volume = 4 / 3 * pi * raio ** 3

print("%.3f" % area)
print("%.3f" % volume)
-- EXECUTION TIME:
0.169555
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
63.617
381.704
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
478.388
7871.076
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
